# soc360-pymes

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.es.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  sandbox.py  sandbox_endpoint.py
.codegraph/: codegraph.db  codegraph.db-shm  daemon.pid
.github/workflows/: ci.yml
.pi/: settings.json
app/: config.py  database.py  dependencies.py  event_bus.py  event_schemas.py  main.py
app/core/: _provider_names.py  config.py  contracts.py  database.py  exceptions.py  llm.py  logging.py  middleware.py  pii.py  rate_limit.py  redis.py  security.py  types.py
app/dependencies/: __init__.py  auth.py  cross_tenant.py  db_deps.py  event_deps.py  llm_deps.py
app/event_bus/: __init__.py  _helpers.py  bus.py  consumer.py
docker/vulnerable-target/: Dockerfile  entrypoint.sh
docs/: demo.md  llm-abstraction.md  prd-f1-closure.md
migrations/: env.py
migrations/versions/: 20260312_2052_initial_schema_712a827b0929.py  20260322_1803_add_plan_and_max_assets_to_tenants_70dc591dac68.py  20260425_1000_add_last_login_at_to_users_b5e9d8c4a123.py  20260504_1130_assets_scans_vulnerabilities_reports_8f2c1a4b9d7e.py  20260504_2320_fix_report_types_consistency_d4e5f6a7b8c9.py  20260625_1400_f2_assets_scans_tenant_8f2c1a4b9d7e.py  20260625_1500_f2_vulnerabilities_reports_bfca7016cbb7.py  20260710_1600_fix_scans_asset_tenant_fk_c1d2e3f4a5b6.py  20260711_1700_restore_fk_child_and_user_indexes_a1b2c3d4e5f6.py
openspec/: config.yaml
openspec/project/: session-handoff-next-steps.md  (+1 more)
scripts/: seed_db.py
skills/git-agent/: SKILL.md
tests/: conftest.py  llm_test_doubles.py  test_auth.py  test_tenants.py  test_users.py  verify_demo_target.sh
(+145 files in other folders)
