[project]
name = "soc360-pymes"
version = "0.1.0"
description = "SOC as a Service backend for small and medium businesses."
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.6",
    "uvicorn[standard]==0.32.1",
    "sqlalchemy[asyncio]==2.0.36",
    "asyncpg==0.30.0",
    "alembic==1.14.0",
    "redis[hiredis]==5.2.1",
    "celery[redis]==5.4.0",
    "python-jose[cryptography]==3.3.0",
    "passlib[bcrypt]==1.7.4",
    "python-multipart==0.0.12",
    "pydantic==2.10.4",
    "pydantic-settings==2.7.0",
    "httpx==0.27.2",
    "structlog==24.4.0",
    "email-validator==2.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.4",
    "pytest-asyncio==0.24.0",
    "httpx==0.27.2",
    "ruff==0.8.4",
    "mypy==1.13.0",
    "anyio==4.12.1",
    "fakeredis==2.34.1",
]

[tool.uv]
package = false
